# scrybe

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README-DOCKER.md  README.md  UPLOAD-WIKI.md  docker-compose.yml
.githooks/: README.md  install.sh  pre-commit  pre-commit-fast
.github/: CODEOWNERS
.github/workflows/: ci.yml
.windsurf/: IMPLEMENTATION-SUMMARY.md
.windsurf/progress/: issue-1-summary.md  session-summary.md
.windsurf/rules/: javascript-typescript-sdk.md  rfc-documentation-standards.md  security-privacy-requirements.md  testing-quality-standards.md  tigerstyle-rust-coding.md
.windsurf/workflows/: code-review-workflow.md  issue-triage-workflow.md  rfc-review-process.md  security-audit-workflow.md  testing-ci-workflow.md  ticket-resolution-workflow.md
WinSurf temp/: README.md
WinSurf temp/rules/: javascript-typescript-sdk.md  rfc-documentation-standards.md  security-privacy-requirements.md  testing-quality-standards.md  tigerstyle-rust-coding.md
WinSurf temp/workflows/: deployment-workflow.md  feature-implementation-workflow.md
crates/scrybe-cache/: Cargo.toml
crates/scrybe-cache/src/: client.rs  lib.rs  nonce.rs  rate_limit.rs  session.rs
crates/scrybe-core/: Cargo.toml  README.md
crates/scrybe-core/src/: config.rs  error.rs  lib.rs  privacy.rs  types.rs
crates/scrybe-core/src/types/: behavioral.rs  browser.rs  network.rs  session.rs
crates/scrybe-enrichment/: Cargo.toml
crates/scrybe-enrichment/src/: fingerprint.rs  lib.rs
crates/scrybe-gateway/: Cargo.toml  README.md
crates/scrybe-gateway/src/: health.rs  main.rs  shutdown.rs  state.rs
crates/scrybe-gateway/src/extraction/: headers.rs  ip.rs  mod.rs
crates/scrybe-gateway/src/middleware/: auth.rs  mod.rs  rate_limit.rs  security.rs
crates/scrybe-gateway/src/routes/: ingest.rs  mod.rs
crates/scrybe-storage/: Cargo.toml
crates/scrybe-storage/src/: client.rs  lib.rs  writer.rs
crates/scrybe-storage/tests/: integration_test.rs
deployment/clickhouse/: init.sql
deployment/dashboard/: index.html
deployment/docker/: dashboard.Dockerfile  gateway.Dockerfile  nginx.conf  test-app.Dockerfile
deployment/redis/: redis.conf
deployment/test-app/: index.html
docs/: ISSUES-CREATED.md  SECURITY.md  WIKI-CONTENT.md  vision.md
docs/legal/: DPA-TEMPLATE.md  PRIVACY-POLICY.md
docs/procedures/: BREACH-NOTIFICATION.md
docs/rfcs/: CHANGELOG-v0.2.0.md  COMPLETION-SUMMARY.md  REVIEW-SUMMARY.md  RFC-0001-architecture.md  RFC-0002-javascript-sdk.md  RFC-0003-ingestion-gateway.md  RFC-0004-fingerprinting-enrichment.md  RFC-0005-storage-schema.md  RFC-0006-session-management.md  RFC-0007-security-privacy.md  RFC-INDEX.md
scrybe-sdk/: .npmignore  README.md  jest.config.js  package-lock.json  package.json  rollup.config.js  tsconfig.json
scrybe-sdk/src/: index.ts  types.ts
scrybe-sdk/src/collectors/: audio.ts  behavioral.ts  canvas.ts  fonts.ts  static.ts  webgl.ts
scrybe-sdk/src/privacy/: consent.ts
scrybe-sdk/src/security/: signing.ts
scrybe-sdk/src/transport/: http.ts
scrybe-sdk/src/utils/: hash.ts  session.ts
scrybe-sdk/tests/: consent.test.ts  hash.test.ts  session.test.ts
