[package]
name = "scrybe-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
http = "1.1"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
mockall = { workspace = true }
