[package]
name = "scrybe-enrichment"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
scrybe-core = { path = "../scrybe-core" }

serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
