[package]
name = "scrybe-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "scrybe-gateway"
path = "src/main.rs"

[dependencies]
scrybe-core = { path = "../scrybe-core" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Authentication and security
hmac = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
hex = { workspace = true }

# Rate limiting
governor = "0.6"

# Time handling
chrono = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
