[package]
name = "scrybe-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
scrybe-core = { path = "../scrybe-core" }

serde = { workspace = true }
serde_json = { workspace = true }
clickhouse = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
